<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity3_2">


    <ImageView
        android:id="@+id/product_imageView"
        android:layout_width="408dp"
        android:layout_height="224dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:contentDescription="@string/product_images"
        android:src="@drawable/logo2"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/productCameraButton"
        android:layout_width="81dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/Image_fetch_from_device"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/product_imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/product_imageView"
        app:layout_constraintVertical_bias="0.534"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <EditText
        android:id="@+id/product_title"
        android:layout_width="401dp"
        android:layout_height="39dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="2dp"
        android:autofillHints="@string/title"
        android:background="@drawable/input_outline"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/title"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/product_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_imageView" />

    <EditText
        android:id="@+id/product_description"
        android:layout_width="398dp"
        android:layout_height="75dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="3dp"
        android:autofillHints=""
        android:background="@drawable/input_outline"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/progressBar_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_title" />

    <ProgressBar
        android:id="@+id/progressBar_button"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_description" />

    <Button
        android:id="@+id/upload_product_button"
        android:layout_width="378dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:text="@string/Upload_button"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>